--- a/app/views/admin/worldwide_organisations/_form.html.erb
+++ b/app/views/admin/worldwide_organisations/_form.html.erb
@@ -62,20 +62,22 @@
     rows: 4,
   } %>
 
-  <%= render "components/single-image-upload", {
-    title: "Default news image",
-    name: "worldwide_organisation[default_news_image_attributes]",
-    id: "worldwide_organisation_default_news_image",
-    image_id: "worldwide_organisation_default_news_image_file",
-    image_name: "worldwide_organisation[default_news_image_attributes][file]",
-    remove_alt_text_field: true,
-    filename: worldwide_organisation.default_news_image.file.identifier,
-    page_errors: worldwide_organisation.errors.any?,
-    error_items: errors_for(worldwide_organisation.default_news_image.errors, :default_news_image),
-    image_src: worldwide_organisation.default_news_image.file.url,
-    image_cache_name: "worldwide_organisation[default_news_image_attributes][file_cache]",
-    image_cache: (worldwide_organisation.default_news_image.file_cache.presence),
-  } %>
+  <%= form.fields_for :default_news_image do |_image_fields| %>
+    <%= render "components/single-image-upload", {
+      title: "Default news image",
+      name: "worldwide_organisation[default_news_image_attributes]",
+      id: "worldwide_organisation_default_news_image",
+      image_id: "worldwide_organisation_default_news_image_file",
+      image_name: "worldwide_organisation[default_news_image_attributes][file]",
+      remove_alt_text_field: true,
+      filename: worldwide_organisation.default_news_image.file.identifier,
+      page_errors: worldwide_organisation.errors.any?,
+      error_items: errors_for(worldwide_organisation.errors, :"default_news_image.file"),
+      image_src: worldwide_organisation.default_news_image.file.url,
+      image_cache_name: "worldwide_organisation[default_news_image_attributes][file_cache]",
+      image_cache: (worldwide_organisation.default_news_image.file_cache.presence),
+    } %>
+  <% end %>
 
   <div class="govuk-button-group govuk-!-margin-top-8">
     <%= render "govuk_publishing_components/components/button", {
