Allow users to select a lead image for CaseStudies and NewsArticles
This does the following:

- adds a feature spec for updating the lead image
- adds a route for updating the lead image
- adds an edition_lead_images_controller with an update action
- updates the image_component to render a form/button for each non-lead
image which hits the new endpoint
- updates the copy in the lead image guidance

--- a/app/assets/stylesheets/admin/views/_edition-resource.scss
+++ b/app/assets/stylesheets/admin/views/_edition-resource.scss
@@ -15,4 +15,8 @@
 .app-view-edition-resource__actions {
   margin-top: govuk-spacing(2);
   margin-bottom: 0;
+
+  .app-view-edition-resource__actions__link {
+    align-self: center;
+  }
 }
