--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -86,7 +86,7 @@
     end,
   } %>
 
-  <%= form.fields_for :default_news_image do |image_fields| %>
+  <%= form.fields_for :default_news_image do |_image_fields| %>
     <%= render "components/single-image-upload", {
       title: "Default news image",
       name: "organisation[default_news_image_attributes]",
