Fix bug where Confirm Destroy and Reorder pages don't render for Non Whitehall Link members
Document Collections Confirm Destroy and Reorder pages for Group Members were breaking due to the fact that it was expecting a document membership and loading the latest edition. When in the case of being added by URL, the structure is different and title needs to be loaded differently.

Fixed by using the helper that has been created for this purpose.

Co-Authored-By: Mark Taylor <mark.taylor1@digital.cabinet-office.gov.uk>
Co-Authored-By: Farah Mehmood <farah.mehmood@digital.cabinet-office.gov.uk>

--- a/app/views/admin/document_collection_group_memberships/confirm_destroy.html.erb
+++ b/app/views/admin/document_collection_group_memberships/confirm_destroy.html.erb
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with url: admin_document_collection_group_document_collection_group_membership_path(@collection, @group, @membership), method: :delete do |form| %>
-      <p class="govuk-body govuk-!-margin-bottom-6">Are you sure you want to remove "<%= @membership.document.latest_edition.title %>" from this collection?</p>
+      <p class="govuk-body govuk-!-margin-bottom-6">Are you sure you want to remove "<%= document_collection_group_member_title(@membership) %>" from this collection?</p>
 
        <div class="govuk-button-group">
         <%= render "govuk_publishing_components/components/button", {
