--- a/app/views/components/_summary_card_component.html.erb
+++ b/app/views/components/_summary_card_component.html.erb
@@ -16,30 +16,32 @@
         <% end %>
       </ul>
     </div>
-    <div class="govuk-summary-card__content">
-      <dl class="govuk-summary-list">
-        <% rows.each do |row| %>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              <%= row[:key] %>
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <%= row[:value] %>
-            </dd>
-            <% if row[:actions].present? %>
-              <dd class="govuk-summary-list__actions">
-                <% row[:actions].each do |action| %>
-                  <% if action[:opens_in_new_tab] %>
-                    <%= link_to sanitize(action[:label] + tag.span(" #{row[:key]} (opens in new tab)", class: "govuk-visually-hidden")), action[:href], class: "govuk-link govuk-link--no-visited-state govuk-!-margin-left-2", rel: "noreferrer noopener", target: "_blank" %>
-                  <% else %>
-                    <%= link_to sanitize(action[:label] + tag.span(" #{row[:key]}", class: "govuk-visually-hidden")), action[:href], class: "govuk-link govuk-link--no-visited-state govuk-!-margin-left-2 #{"gem-link--destructive" if action[:destructive]}".strip %>
-                  <% end %>
-                <% end %>
+    <% if rows.present? %>
+      <div class="govuk-summary-card__content">
+        <dl class="govuk-summary-list">
+          <% rows.each do |row| %>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                <%= row[:key] %>
+              </dt>
+              <dd class="govuk-summary-list__value">
+                <%= row[:value] %>
               </dd>
-            <% end %>
-          </div>
-        <% end %>
-      </dl>
-    </div>
+              <% if row[:actions].present? %>
+                <dd class="govuk-summary-list__actions">
+                  <% row[:actions].each do |action| %>
+                    <% if action[:opens_in_new_tab] %>
+                      <%= link_to sanitize(action[:label] + tag.span(" #{row[:key]} (opens in new tab)", class: "govuk-visually-hidden")), action[:href], class: "govuk-link govuk-link--no-visited-state govuk-!-margin-left-2", rel: "noreferrer noopener", target: "_blank" %>
+                    <% else %>
+                      <%= link_to sanitize(action[:label] + tag.span(" #{row[:key]}", class: "govuk-visually-hidden")), action[:href], class: "govuk-link govuk-link--no-visited-state govuk-!-margin-left-2 #{"gem-link--destructive" if action[:destructive]}".strip %>
+                    <% end %>
+                  <% end %>
+                </dd>
+              <% end %>
+            </div>
+          <% end %>
+        </dl>
+      </div>
+    <% end %>
   </div>
 <% end %>
