Add basic translations_summary_card_component
This just adds the component and checks it renders with a title.

--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -249,7 +249,10 @@
       <% end %>
     </section>
   <% end %>
-  <% if @edition.translatable? %>
+
+  <% if Flipflop.document_hub? %>
+    <%= render Admin::Editions::Show::TranslationsSummaryCardComponent.new(edition: @edition) %>
+  <% elsif @edition.translatable? %>
     <section class="app-view-summary__section">
       <%= render "govuk_publishing_components/components/heading", {
         text: "Translations",
