Render summary list when translations exist for an edition

--- a/app/components/admin/editions/show/translations_summary_card_component.html.erb
+++ b/app/components/admin/editions/show/translations_summary_card_component.html.erb
@@ -1,4 +1,5 @@
 <%= render "components/summary_card_component", {
   title: "Translations",
   summary_card_actions: summary_card_actions,
+  rows: rows,
 } %>
