Allow person to use FeaturedImageData
Implement FeaturedImageData for Person to make it more consistent with other similar classes
that have a carrierwave mount_uploader on them, as well as enabling Person to use the assets
flow rather than legacy url path.

Co-authored-by: Iris Lau <iris.lau@digital.cabinet-office.gov.uk>

--- a/app/views/admin/people/_form.html.erb
+++ b/app/views/admin/people/_form.html.erb
@@ -61,21 +61,22 @@
     legend_text: "Image",
     heading_size: "l",
   } do %>
-    <% if person.image_url %>
+    <% if person.image&.url %>
       <div class="app-view-edit-person__image">
-        <%= image_tag person.image_url %>
+        <%= image_tag person.image.url %>
       </div>
     <% end %>
 
     <div class="form-group">
+      <%= hidden_field_tag "person[image_attributes][id]", person.image&.id %>
       <%= render "govuk_publishing_components/components/file_upload", {
         label: {
           text: "Upload a file",
           heading_size: "m",
         },
-        name: "person[image]",
-        id: "person_image",
-        error_items: errors_for(person.errors, :image),
+        name: "person[image_attributes][file]",
+        id: "person_image_file",
+        error_items: errors_for(person.errors, :"image.file"),
       } %>
     </div>
   <% end %>
