--- a/app/views/admin/people/show.html.erb
+++ b/app/views/admin/people/show.html.erb
@@ -51,7 +51,7 @@
           },
           {
             field: "Image",
-            value: (image_tag(@person.image.url(:s300)) + tag.span("Image present", class: "govuk-visually-hidden") if @person.image.url),
+            value: (image_tag(@person.image.url(:s300)) + tag.span("Image present", class: "govuk-visually-hidden") if @person.image&.url),
           },
           {
             field: "Biography",
