--- a/app/views/admin/document_collection_groups/_form.html.erb
+++ b/app/views/admin/document_collection_groups/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: group, url: url do |form| %>
+<%= form_with model: group, url: url do |_| %>
   <%= render "govuk_publishing_components/components/input", {
     label: {
       text: "Name (required)",
