--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -97,7 +97,7 @@
       filename: organisation.default_news_image.file.identifier,
       page_errors: organisation.errors.any?,
       error_items: errors_for(organisation.errors, :"default_news_image.file"),
-      image_src: organisation.default_news_image.file.url,
+      image_src: organisation.default_news_image.url,
       image_cache_name: "organisation[default_news_image_attributes][file_cache]",
       image_cache: (organisation.default_news_image.file_cache.presence),
     } %>
