--- a/app/views/admin/worldwide_organisations/_form.html.erb
+++ b/app/views/admin/worldwide_organisations/_form.html.erb
@@ -73,7 +73,7 @@
       filename: worldwide_organisation.default_news_image.file.identifier,
       page_errors: worldwide_organisation.errors.any?,
       error_items: errors_for(worldwide_organisation.errors, :"default_news_image.file"),
-      image_src: worldwide_organisation.default_news_image.file.url,
+      image_src: worldwide_organisation.default_news_image.url,
       image_cache_name: "worldwide_organisation[default_news_image_attributes][file_cache]",
       image_cache: (worldwide_organisation.default_news_image.file_cache.presence),
     } %>
