Fix Orphan Document scenario for Document Collection
Document Collection Groups assume that documents added to the document groups always have a latest_edition attached to it since users are only allowed to search for and add published documents to the group. However, since there is behaviour to unpublish and delete the edition, the document is left orphaned, which is currently causing server errors for users who have previously added this document to their Document Collection Group.

Fix is to render the unavailable document so that the user would know to remove this orphaned document relationship from their document collection group.

Co-Authored-By: Nikin Nagewadia <nikin.nagewadia@digital.cabinet-office.gov.uk>

--- a/app/views/admin/document_collection_group_memberships/reorder.html.erb
+++ b/app/views/admin/document_collection_group_memberships/reorder.html.erb
@@ -11,9 +11,10 @@
       } %>
       <%= render "govuk_publishing_components/components/reorderable_list", {
         items: @group.memberships.map do |membership|
+          title = document_collection_group_member_unavailable?(membership) ? tag.span("Unavailable Document", class: "govuk-!-font-weight-bold") : document_collection_group_member_title(membership)
           {
             id: membership.id,
-            title: document_collection_group_member_title(membership),
+            title: title,
           }
         end,
       } %>
