--- a/app/views/admin/document_collection_group_memberships/index.html.erb
+++ b/app/views/admin/document_collection_group_memberships/index.html.erb
@@ -8,6 +8,19 @@
 <% content_for :context, @collection.title %>
 <% content_for :title_margin_bottom, 4 %>
 
+<% if unavailable_document_count(@group.memberships) > 0 %>
+  <% content_for :banner, render("govuk_publishing_components/components/notice", {
+    title: sanitize("<p>Remove #{unavailable_document_count(@group.memberships)} unavailable document(s) within the group.</p>"),
+    show_banner_title: true,
+    data_attributes: {
+      module: "gem-track-click",
+      "track-category": "important-banner",
+      "track-action": "unavailable-documents-exist-in-document-collection-group",
+      "track-label": "Important",
+    },
+  }) %>
+<% end %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <p class="govuk-body">
@@ -19,56 +32,43 @@
       items: secondary_navigation_tabs_items(@group, request.path),
     } %>
 
-    <% if @group.memberships.many? %>
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full app-view-document-collection-group-memberships-index__heading ">
-          <%= render "govuk_publishing_components/components/heading", {
-            text: "Documents",
-            margin_bottom: 6,
-          } %>
-          <ul class="govuk-list">
-            <li>
-              <%= link_to "Add document", admin_document_collection_group_search_options_path(@collection, @group), class: "govuk-link" %>
-            </li>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full app-view-document-collection-group-memberships-index__heading ">
+        <%= render "govuk_publishing_components/components/heading", {
+          text: "Documents",
+          margin_bottom: 6,
+        } %>
+        <ul class="govuk-list">
+          <li>
+            <%= link_to "Add document", admin_document_collection_group_search_options_path(@collection, @group), class: "govuk-link" %>
+          </li>
 
+          <% if @group.memberships.many? %>
             <li>
               <%= link_to "Reorder document", reorder_admin_document_collection_group_document_collection_group_memberships_path(@collection, @group), class: "govuk-link" %>
             </li>
-          </ul>
-        </div>
+          <% end %>
+        </ul>
       </div>
-    <% else %>
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full app-view-document-collection-group-memberships-index__heading">
-          <%= render "govuk_publishing_components/components/heading", {
-            text: "Documents",
-            margin_bottom: 6,
-          } %>
-
-          <ul class="govuk-list">
-            <li>
-              <%= link_to "Add document", admin_document_collection_group_search_options_path(@collection, @group), class: "govuk-link" %>
-            </li>
-          </ul>
-        </div>
-      </div>
-    <% end %>
+    </div>
 
     <% if @group.memberships.present? %>
       <div class="govuk-table--with-actions app-view-document-collection-group-memberships-index__table">
         <%= render "govuk_publishing_components/components/table", {
           rows: @group.memberships.map do |membership|
-            title = document_collection_group_member_title(membership)
-            url = document_collection_group_member_url(membership)
-            [
-              {
-                text: title,
-              },
-              {
-                text: link_to(sanitize("View #{tag.span(title, class: "govuk-visually-hidden")}"), url, class: "govuk-link") +
-                  link_to(sanitize("Remove #{tag.span(title, class: "govuk-visually-hidden")}"), confirm_destroy_admin_document_collection_group_document_collection_group_membership_path(@collection, @group, membership), class: "govuk-link gem-link--destructive govuk-!-margin-left-3"),
-              },
-            ]
+            if document_collection_group_member_unavailable?(membership)
+              title = tag.span("Unavailable Document", class: "govuk-!-font-weight-bold")
+              remove_link = link_to(sanitize("Remove #{tag.span(title, class: "govuk-visually-hidden")}"), confirm_destroy_admin_document_collection_group_document_collection_group_membership_path(@collection, @group, membership), class: "govuk-link gem-link--destructive govuk-!-margin-left-3")
+              links = remove_link
+            else
+              title = document_collection_group_member_title(membership)
+              url = document_collection_group_member_url(membership)
+              view_link = link_to(sanitize("View #{tag.span(title, class: "govuk-visually-hidden")}"), url, class: "govuk-link")
+              remove_link = link_to(sanitize("Remove #{tag.span(title, class: "govuk-visually-hidden")}"), confirm_destroy_admin_document_collection_group_document_collection_group_membership_path(@collection, @group, membership), class: "govuk-link gem-link--destructive govuk-!-margin-left-3")
+              links = view_link + remove_link
+            end
+
+            [{ text: title }, { text: links } ]
           end,
         } %>
       </div>
@@ -76,7 +76,6 @@
       <%= render "govuk_publishing_components/components/warning_text", {
         text: "There are no documents inside this group",
       } %>
-
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
     <% end %>
   </div>
