--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -51,34 +51,38 @@
     </section>
   <% end %>
 
-  <section class="app-view-summary__section app-view-summary__taxonomy-topics">
-    <%= render "govuk_publishing_components/components/heading", {
-      text: "Topic taxonomy tags",
-      heading_level: 2,
-      font_size: "l",
-      margin_bottom: 3,
-    } %>
-
-    <p class="govuk-body">
-      <%= link_to(@edition_taxons.any? ? "Change tags" : "Add tags",
-                  edit_admin_edition_tags_path(@edition.id), class: "govuk-link") %>
-    </p>
-
-    <% @edition_taxons.map(&:full_path).each do | tag_path | %>
-      <div class="govuk-breadcrumbs">
-        <ol class="govuk-breadcrumbs__list app-view-summary__topic-tag-list">
-          <% tag_path.each do | path | %>
-            <li class="govuk-breadcrumbs__list-item app-view-summary__topic-tag-list-item"><%= path[:title] %></li>
-          <% end %>
-        </ol>
-      </div>
-    <% end %>
-    <% unless @edition_taxons.any? %>
-      <%= render "govuk_publishing_components/components/warning_text", {
-        text: "You need to add topic tags before you can publish this document.",
+  <% if Flipflop.document_hub? %>
+    <%= render Admin::Editions::Show::TopicTagsSummaryCardComponent.new(edition: @edition, edition_taxons: @edition_taxons) %>
+  <% else %>
+    <section class="app-view-summary__section app-view-summary__taxonomy-topics">
+      <%= render "govuk_publishing_components/components/heading", {
+        text: "Topic taxonomy tags",
+        heading_level: 2,
+        font_size: "l",
+        margin_bottom: 3,
       } %>
-    <% end %>
-  </section>
+
+      <p class="govuk-body">
+        <%= link_to(@edition_taxons.any? ? "Change tags" : "Add tags",
+                    edit_admin_edition_tags_path(@edition.id), class: "govuk-link") %>
+      </p>
+
+      <% @edition_taxons.map(&:full_path).each do | tag_path | %>
+        <div class="govuk-breadcrumbs">
+          <ol class="govuk-breadcrumbs__list app-view-summary__topic-tag-list">
+            <% tag_path.each do | path | %>
+              <li class="govuk-breadcrumbs__list-item app-view-summary__topic-tag-list-item"><%= path[:title] %></li>
+            <% end %>
+          </ol>
+        </div>
+      <% end %>
+      <% unless @edition_taxons.any? %>
+        <%= render "govuk_publishing_components/components/warning_text", {
+          text: "You need to add topic tags before you can publish this document.",
+        } %>
+      <% end %>
+    </section>
+  <% end %>
 
   <section class="app-view-summary__section">
     <%= render "govuk_publishing_components/components/heading", {
